tests/typing/bad/extra-new1.scala
class A[B] {
    def m() { var b : B = new B() }
}
object Main { def main(args: Array[String]) { } }
